--- a/project.html
+++ b/project.html
@@ -49,7 +49,6 @@
                     <img src="images/goals.png" alt="Sreeja profile pic">
                 </div>
             </div>
-            
         </div>
 
         <div class="window">
@@ -101,6 +100,23 @@
                 <div class="info">
                     <h3>Mood Board</h3>
                     <p>Based on our individual mood boards, we created one joint one with elements of everyone's involved. We wanted to go for comforting color and also keep the red from Pete's original branding.
+                    </p>
+                </div>
+            </div>
+        </div>
+
+        <div class="file">
+            <div class="top">
+                <img  src="images/style-top.svg" alt="top part of the file">
+            </div>
+    
+            <div class="content">
+                <div class="pic">
+                    <img src="images/stylesheet.jpg" alt="Sreeja profile pic">
+                </div>
+
+                <div class="info">
+                    <h3>Style Sheet</h3>
                     </p>
                 </div>
             </div>
