Switch mood board and style sheet

--- a/project.html
+++ b/project.html
@@ -89,17 +89,16 @@
 
         <div class="window">
             <div class="window-top">
-                <img src="images/aesthetic-top.svg" alt="window top" width="100%">
+                <img src="images/style-top.svg" alt="window top" width="100%">
             </div>
 
             <div class="window-content">
                 <div class="window-pic">
-                    <img src="images/moodboard.png" alt="moodboard">
+                    <img src="images/stylesheet.jpg" alt="moodboard">
                 </div>
 
                 <div class="info">
-                    <h3>Mood Board</h3>
-                    <p>Based on our individual mood boards, we created one joint one with elements of everyone's involved. We wanted to go for comforting color and also keep the red from Pete's original branding.
+                    <h3>Style Sheet</h3>
                     </p>
                 </div>
             </div>
@@ -107,16 +106,17 @@
 
         <div class="file">
             <div class="top">
-                <img  src="images/style-top.svg" alt="top part of the file">
+                <img  src="images/aesthetic-top.svg" alt="top part of the file">
             </div>
     
             <div class="content">
                 <div class="pic">
-                    <img src="images/stylesheet.jpg" alt="style sheet">
+                    <img src="images/moodboard.png" alt="style sheet">
                 </div>
 
                 <div class="info">
-                    <h3>Style Sheet</h3>
+                    <h3>Mood Board</h3>
+                    <p>Based on our individual mood boards, we created one joint one with elements of everyone's involved. We wanted to go for comforting color and also keep the red from Pete's original branding.
                 </div>
             </div>
         </div>
