--- a/project.html
+++ b/project.html
@@ -120,6 +120,26 @@
                 </div>
             </div>
         </div>
+
+        <div class="window">
+            <div class="window-top">
+                <img src="images/prototype-top.svg" alt="window top" width="100%">
+            </div>
+
+            <div class="window-content">
+                <div class="window-pic">
+                    <a href="https://www.figma.com/proto/HH3GWXRT98R1ddSO68HpUx/IDM216%3A-BeepBop?page-id=180%3A2&node-id=180-1246&viewport=-561%2C-154%2C0.09&t=Uoeh4OvkagUNbsIY-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=180%3A714" target="_blank" rel="noopener noreferrer">
+                        <img src="images/prototype.jpg" alt="moodboard">
+                    </a>
+                </div>
+
+                <div class="info">
+                    <h3>The App's Critical Flow</h3>
+                    <p>The goal is to “sign up” for an account, check out the profile page, order a custom breakfast sandwich from Pete’s, and then check the status of that order.</p>
+                    <p>Click the image to go through and interact with the prototype!</p>
+                </div>
+            </div>
+        </div>
     </div>
 </body>
 </html>
