💅 Update style for record.php

--- a/project.html
+++ b/project.html
@@ -34,7 +34,7 @@
 
                 <div class="info">
                     <h3>Pete's Little Lunch Box</h3>
-                    <p>Pete’s is an American style breakfast and lunch food truck located on Drexel University’s campus. They provide hearty and efficient meals at a low cost for students and workers in the area. Pete’s meals fill up both stomachs and hearts.</p>
+                    <p>Pete's is an American style breakfast and lunch food truck located on Drexel University’s campus. They provide hearty and efficient meals at a low cost for students and workers in the area. Pete’s meals fill up both stomachs and hearts.</p>
                 </div>
             </div>
         </div>
