Update prototype link

--- a/project.html
+++ b/project.html
@@ -128,7 +128,7 @@
 
             <div class="window-content">
                 <div class="window-pic">
-                    <a href="https://www.figma.com/proto/HH3GWXRT98R1ddSO68HpUx/IDM216%3A-BeepBop?page-id=180%3A2&node-id=180-1246&viewport=-561%2C-154%2C0.09&t=Uoeh4OvkagUNbsIY-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=180%3A714" target="_blank" rel="noopener noreferrer">
+                    <a href="https://www.figma.com/proto/HH3GWXRT98R1ddSO68HpUx/IDM216%3A-BeepBop?page-id=180%3A2&node-id=180-1220&viewport=-2750%2C-1808%2C0.36&t=gvkVZUhT9OMY1LNE-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=180%3A714" target="_blank" rel="noopener noreferrer">
                         <img src="images/prototype.jpg" alt="moodboard">
                     </a>
                 </div>
