--- a/project.html
+++ b/project.html
@@ -135,8 +135,8 @@
 
                 <div class="info">
                     <h3>The App's Critical Flow</h3>
-                    <p>The goal is to “sign up” for an account, check out the profile page, order a custom breakfast sandwich from Pete’s, and then check the status of that order.</p>
-                    <p>Click the image to go through and interact with the prototype!</p>
+                    <p>The Task: order a BLT sandwich from Pete’s Little Lunch Box. Then, check the status of that order.</p>
+                    <p>Click the image above to go through and interact with the <a href="https://www.figma.com/proto/HH3GWXRT98R1ddSO68HpUx/IDM216%3A-BeepBop?page-id=180%3A2&node-id=180-1220&viewport=-2750%2C-1808%2C0.36&t=gvkVZUhT9OMY1LNE-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=180%3A714" target="_blank">prototype</a>!</p>
                 </div>
             </div>
         </div>
