--- a/project.html
+++ b/project.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Project Page</title>
+    <title>BeepBop's Project Page</title>
     <link rel="stylesheet" href="css/project.css">
 </head>
 <body>
@@ -129,13 +129,13 @@
             <div class="window-content">
                 <div class="window-pic">
                     <a href="https://www.figma.com/proto/HH3GWXRT98R1ddSO68HpUx/IDM216%3A-BeepBop?page-id=180%3A2&node-id=180-1220&viewport=-2750%2C-1808%2C0.36&t=gvkVZUhT9OMY1LNE-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=180%3A714" target="_blank" rel="noopener noreferrer">
-                        <img src="images/prototype.jpg" alt="moodboard">
+                        <img src="images/critical path.png" alt="moodboard">
                     </a>
                 </div>
 
                 <div class="info">
                     <h3>The App's Critical Flow</h3>
-                    <p>The Task: order a BLT sandwich from Pete’s Little Lunch Box. Then, check the status of that order.</p>
+                    <p>The Task: order a custom sandwich from Pete’s Little Lunch Box. Then, make an order and check the status of that order.</p>
                     <p>Click the image above to go through and interact with the <a href="https://www.figma.com/proto/HH3GWXRT98R1ddSO68HpUx/IDM216%3A-BeepBop?page-id=180%3A2&node-id=180-1220&viewport=-2750%2C-1808%2C0.36&t=gvkVZUhT9OMY1LNE-1&scaling=scale-down&content-scaling=fixed&starting-point-node-id=180%3A714" target="_blank">prototype</a>!</p>
                 </div>
             </div>
