🚧 Add check-out and log-in screen

--- a/alpha/home2.html
+++ b/alpha/home2.html
@@ -19,6 +19,11 @@
             </a>
         </nav>
 
+        <div class="order-status" onclick="viewOrderStatus()">
+            <h4>View your order in progress</h4>
+            <img src="../images/icons/next.svg" alt="next icon">
+        </div>
+
         <div class="content">
             <div class="hero-image">
 
@@ -106,7 +111,7 @@
                 <p class="label">Menu</p>
             </a>
 
-            <a href="#" class="icon-container">
+            <a href="profile.html" class="icon-container">
                 <img src="../images/icons/profile.svg" alt="contact icon">
                 <p class="label">Profile</p>
             </a>
@@ -114,6 +119,8 @@
 
 
     </div>
+
+    <script src="js/button.js"></script>
     
 </body>
 </html>
