🐛 Fix special character

--- a/alpha/detail.html
+++ b/alpha/detail.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Egg & Cheese Sandwich</title>
+    <title>Egg &amp; Cheese Sandwich</title>
     <link rel="icon" type="image/gif" href="../images/logo.png" />
     <link rel="stylesheet" href="css/general.css">
     <link rel="stylesheet" href="css/detail.css">
@@ -24,7 +24,7 @@
 
             <div class="description-container">
                 <div class="description">
-                    <h2>Egg & Cheese</h2>
+                    <h2>Egg &amp; Cheese</h2>
                     <h2>$4.50</h2>
                 </div>
                 <p>This sandwich comes with Egg and Cheese, check the items below to add to this sandwich.</p>
