--- a/alpha/home2.html
+++ b/alpha/home2.html
@@ -54,7 +54,7 @@
                     <div class="fav">
                         <img src="../images/menu-item/egg-and-cheese.jpg " alt="Egg & Cheese">
                         <div class="description">
-                            <p>Egg & Cheese</p>
+                            <p>Egg &amp; Cheese</p>
                             <p>$4.50</p>
                         </div>
                     </div>
