🐛 Fix not working links

--- a/alpha/detail.html
+++ b/alpha/detail.html
@@ -120,7 +120,7 @@
                         <h4>ADD TO BAG</h4>
                     </button> -->
 
-                    <button class="add-to-bag" type="button" onclick="window.location.href='payment-1.html'">
+                    <button class="add-to-bag" type="button" onclick="window.location.href='added-to-bag-animation.html'">
                         <h4>ADD TO BAG</h4>
                     </button>
 
