--- a/alpha/added-to-bag-animation.html
+++ b/alpha/added-to-bag-animation.html
@@ -4,17 +4,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adding to Bag Animation</title>
-    <style>
-        #gif-container {
-            display: none; 
-        }
-    </style>
+    <link rel="stylesheet" href="css/general.css">
+    <link rel="stylesheet" href="css/adding.css">
 </head>
 <body>
 
-    <div id="gif-container">
-        <img src="/images/add-to-bag.gif" alt="Add to Bag GIF" id="gif">
+    <div class="screen-container">
+
+        <div id="gif-container">
+            <img src="../images/add-to-bag.gif" alt="Add to Bag GIF" id="gif">
+        </div>
     </div>
+
 
     <script>
         setTimeout(() => {
