--- a/alpha/order-status.html
+++ b/alpha/order-status.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="css/general.css">
     <link rel="stylesheet" href="css/status.css">
     <link rel="stylesheet" href="css/button.css">
+    <link rel="stylesheet" href="css/foodcard.css">
 
 </head>
 <body>
@@ -31,7 +32,7 @@
 
             <div class="content">
 
-                <h1>Recipt Order</h1>
+                <h1>Receipt Order</h1>
 
                 <p class="order-number">
                     #5
@@ -49,6 +50,20 @@
                     <div></div>
                     <div></div>
                     <div></div>
+                </div>
+
+                <div class="food-card">
+                    <img class="food-pic" src="../images/menu-item/egg-and-cheese.jpg">
+                    <div class="food-details">
+                        <div class="food-details-title">
+                            <h3>Egg &amp; Cheese</h3>
+                            <h3>$6.00</h3>
+                        </div>
+                        <div class="food-description">
+                            <p>Bagel, Bacon, Ketchup</p>
+                        </div>
+                        
+                    </div>
                 </div>
                 
             </div>
