--- a/alpha/confirm.html
+++ b/alpha/confirm.html
@@ -29,7 +29,7 @@
 
         <div class="content">
 
-            <h1>ORDER CONFIRM!</h1>
+            <h1>ORDER CONFIRMED!</h1>
 
             <p>You earned <strong>772</strong> pts with your order</p>
 
