--- a/alpha/test.html
+++ b/alpha/test.html
@@ -6,7 +6,8 @@
     <title>Home | Pete's Lunch Box</title>
     <link rel="icon" type="image/gif" href="/images/logo.png" />
     <link rel="stylesheet" href="css/general.css">
-    <link rel="stylesheet" href="css/home.css">
+
+    <link rel="stylesheet" href="css/test.css">
 </head>
 <body>
 
@@ -19,7 +20,7 @@
             </a>
         </nav>
 
-        <div class="content">
+        <!-- <div class="content">
             <div class="hero-image">
 
                 <img class="hero-image"  src="../images/petes-truck.jpg" alt="Pete's food truck">
@@ -88,7 +89,7 @@
                 <img src="../images/map.jpg" alt="map" class="map">
     
             </div>
-        </div>
+        </div> -->
 
 
 
@@ -118,4 +119,3 @@
     
 </body>
 </html>
-
