🚧 Update icon favorite section in detail page

--- a/alpha/detail.html
+++ b/alpha/detail.html
@@ -87,11 +87,11 @@
                     <h2>Condiments</h2>
 
                     <label for="mayo">
-                        <input type="checkbox" name="condiment" value="ketchup" id="ketchup">Mayo
+                        <input type="checkbox" name="condiment" value="mayo" id="mayo">Mayo
                     </label><br>
 
                     <label for="ketchup">
-                        <input type="checkbox" name="condiment" value="mayo" id="mayo">Ketchup
+                        <input type="checkbox" name="condiment" value="ketchup" id="ketchup">Ketchup
                     </label><br>
 
                     <label for="salt">
@@ -107,7 +107,15 @@
                     <textarea class="note" id="note" name="note" placeholder="Add a note"></textarea>
 
                     <div class="fav-container">
-                        <p>this section for favorite button and count</p>
+                        <div class="counter">
+                            <p>-</p>
+                            <p>1</p>
+                            <p>+</p>
+                        </div>
+
+                        <div class="heart-btn">
+                            <img src="../images/icons/heart.svg" alt="heart btn">
+                        </div>
                     </div>
 
                     <div class="subtotal">
