--- a/beta/test.html
+++ b/beta/test.html
@@ -20,6 +20,11 @@
             </a>
         </nav>
 
+
+        <p>
+            peekaboo
+        </p>
+
         <!-- <div class="content">
             <div class="hero-image">
 
