--- a/beta/order-status.html
+++ b/beta/order-status.html
@@ -40,13 +40,21 @@
             <div class="estimate-time">
                 <h2>Estimated pick up time</h2>
                 <h2>9:30 AM</h2>
-
             </div>
             <div class="progress-bar">
-                <div></div>
-                <div></div>
-                <div></div>
-            </div>
+                <div class="status">
+                    <img src="/images/logo.png" alt="logo" width="78px">
+                    <div class="step"></div>
+                </div>
+                <div class="status">
+                    <img src="/images/icons/frying-pan.svg" alt="frying-pan">
+                    <div class="step"></div>
+                </div>
+                <div class="status">
+                    <img src="/images/icons/checkmark.svg" alt="checkmark">
+                    <div class="step"></div>
+                </div>
+            </div>            
 
             <h4>Your order is being prepared!</h4>
 
