--- a/ca/home.html
+++ b/ca/home.html
@@ -13,7 +13,7 @@
     <div class="screen-container">
 
         <nav>
-            <h1>Home</h1>
+            <h1>PETE'S</h1>
             <a href="#">
                 <img src="../images/icons/shopping-bag.svg" alt="shopping bag icon">
             </a>
