🚧 Update critique flow

--- a/beta/home.html
+++ b/beta/home.html
@@ -13,17 +13,19 @@
     <div class="screen-container">
 
         <nav>
-            <h1>PETE'S <img src="/images/icons/truck-icon.svg" alt="truck logo"></h1>
-            <a href="#">
+            <h1>PETE'S <img src="../images/icons/truck-icon.svg" alt="truck logo"></h1>
+            <a href="empty-bag.html" >
                 <img src="../images/icons/shopping-bag.svg" alt="shopping bag icon">
             </a>
+
+            
         </nav>
 
         <div class="content">
 
             <div class="CTA">
                 <h1>HI THERE, I'M PETE!</h1>
-                <img class="mascot" src="/images/homepage-featured-img.svg" alt="mascot">
+                <img class="mascot" src="../images/homepage-featured-img.svg" alt="mascot">
                 <a href="menu.php"><button class="login-button">ORDER NOW</button></a>
             </div> 
 
@@ -85,7 +87,7 @@
                     <p>Philadelphia, PA 19104</p>
                 </div>
                 
-                <img src="/images/new-map.svg" alt="map" class="map">
+                <img src="../images/new-map.svg" alt="map" class="map">
             </div>
 
             <div class="help">
