--- a/beta/confirm.html
+++ b/beta/confirm.html
@@ -33,7 +33,7 @@
 
                 <h1>ORDER CONFIRMED!</h1>
                 <div class="stars-container">
-                    <img src="/images/icons/3stars.svg" class="stars" alt="3 stars">
+                    <img src="../images/icons/3stars.svg" class="stars" alt="3 stars">
                 </div>                
                 <p>You earned <strong>772</strong> pts with your order</p>
     
