🐛 Fix heart button

--- a/beta/order-status.html
+++ b/beta/order-status.html
@@ -15,8 +15,9 @@
     <div class="screen-container">
 
         <nav>
+            
             <a href="home2.html">
-                <img src="../images/icons/back.svg" alt="back icon">
+                <img src="../images/icons/cancel.svg" alt="cancel icon">
             </a>
         </nav>
 
