--- a/beta/confirm.html
+++ b/beta/confirm.html
@@ -35,7 +35,7 @@
                 <div class="stars-container">
                     <img src="../images/icons/3stars.svg" class="stars" alt="3 stars">
                 </div>                
-                <p>You earned <strong>772</strong> pts with your order</p>
+                <p>You earned <strong>772 pts</strong> with your order</p>
     
                 <div class="animation">
                     <img class="heart-gif" src="../images/icons/heart.gif" alt="heart gif">
