FIx back button on confirm page

--- a/beta/confirm.html
+++ b/beta/confirm.html
@@ -14,7 +14,7 @@
     <div class="screen-container">
 
         <nav>
-            <a href="#">
+            <a href="payment-1.html">
                 <img src="../images/icons/back.svg" alt="back icon">
             </a>
         </nav>
