--- a/beta/login-signup.html
+++ b/beta/login-signup.html
@@ -23,7 +23,7 @@
         </nav>
 
         <div class="nav-background">
-            <svg width="440" height="458" viewBox="0 0 440 458" fill="none" xmlns="http://www.w3.org/2000/svg">
+            <svg width="100%" height="458" viewBox="0 0 440 458" fill="none" xmlns="http://www.w3.org/2000/svg">
                 <mask id="mask0_932_1514" style="mask-type:alpha" maskUnits="userSpaceOnUse" x="0" y="0" width="440" height="458">
                 <rect width="440" height="458" fill="#D9D9D9"/>
                 </mask>
