--- a/final/payment-selection.html
+++ b/final/payment-selection.html
@@ -41,7 +41,7 @@
                         
                         <label>
                             <input type="radio" name="payment" value="Apple Pay" data-icon="../images/payment/apple-pay.svg">
-                            <img src="../images/payment/apple-pay.svg" alt="Apple Pay">
+                            <img src="/images/icons/applepay.jpg" alt="Apple Pay">
                         </label>
                         
                         <label>
