💅 Update adding gif and order status

--- a/final/payment-selection.html
+++ b/final/payment-selection.html
@@ -40,8 +40,8 @@
                         </label> 
                         
                         <label>
-                            <input type="radio" name="payment" value="Apple Pay" data-icon="../images/payment/apple-pay.svg">
-                            <img src="/images/icons/applepay.jpg" alt="Apple Pay">
+                            <input type="radio" name="payment" value="Apple Pay" data-icon="../images/icons/applepay.jpg">
+                            <img src="../images/icons/applepay.jpg" alt="Apple Pay">
                         </label>
                         
                         <label>
