Index + project page

--- a/project.html
+++ b/project.html
@@ -9,10 +9,15 @@
 <body>
     <section class="title">
         <div class="bar"></div>
-        <h1>BEEPBOP!</h1>
+        <h1>BEEPBOP! THE PROJECT</h1>
     </section>
 
-    
+    <div class="directory-container">
+        <h3>Project Directory</h3>
+        <a class="nav-buttons" href="index.html" target="_blank">Team Info</a>
+        <a class="nav-buttons" href="project.html" target="_blank">Project Info</a>
+        <a class="nav-buttons" href="https://digmstudents.westphal.drexel.edu/~yl3434/beepbop/final/login-signup.php" target="_blank">View Project</a>
+    </div>
 
     <div class="container">
 
